# xv6-rust

./: 404.html  Cargo.toml  Makefile  book.toml  chapter_1.html  fs.img  fun.h  index.html  main  main.c  print.html  q  reference.html  searchindex.js  searchindex.json
doc/: index.html
guide/: Makefile.html  environment.html  gdb.html  index.html
kernel/: Cargo.toml  Makefile  build.rs  kernel  kernel.asm
kernel/src/: link_app.S  linker.ld  main.rs  mem_layout.rs
kernel/src/mem/: address.rs  kernel_heap.rs  kernel_space.rs  mod.rs  page_allocator.rs  page_table.rs  param.rs  user_space.rs
kernel/src/syscall/: fs.rs  process.rs
kernel/src/task/: loader.rs  mod.rs  param.rs  task.rs
kernel/src/trap/: context.rs  mod.rs  trampoline.S
log/: 2023-1.html  2023-2.html  2023-3.html  index.html
solution/: index.html  memory.html
src/: lib.rs
src/kernel/: main.rs
user/: Makefile  _cat  _echo  _forktest  _grep  _grind  _init  _kill  _ln  _ls  _mkdir  _rm  _sh  _stressfs  _usertests  _wc  _zombie  initcode.out
user/src/: linker.ld
