[package]
name = "kernel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
riscv = { git = "https://github.com/rcore-os/riscv", features = ["inline-asm"] }
lazy_static = {version = "1.4.0", features = ["spin_no_std"]}
buddy_system_allocator = "0.7"
bitflags = "2.0.0"
rand = {version = "0.8.5", features = ["small_rng"], default-features = false}
xmas-elf = "0.9.0"

[profile.release]
debug = true